<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".showTime">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="296dp"
        android:layout_height="212dp"
        android:layout_marginTop="98dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/the_woman_king"
        app:layout_constraintBottom_toTopOf="@+id/rdbGp1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/rdbGp1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="189dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <RadioButton
            android:id="@+id/rdb1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time1"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/rdb2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time2"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/rdb3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time3"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/rdb4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time4"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/rdb5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time5"
            android:textSize="18sp" />

    </RadioGroup>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="16dp"
        android:text="@string/moiveTitle"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="Select Tickets"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rdbGp1" />

</androidx.constraintlayout.widget.ConstraintLayout>